--- a/src/main/resources/sqlmap/mappers/services/report/HSReport_SQL.xml
+++ b/src/main/resources/sqlmap/mappers/services/report/HSReport_SQL.xml
@@ -199,4 +199,66 @@
 					                       ]]>
 		      
         </select>
+        <select id="selectCMGroupList" parameterType="Map" resultType="egovMap">
+            SELECT Project1.MEM_ID CODE_ID  ,
+				       Project1.MEM_CODE MEM_CODE  ,
+				       Project1.NAME NAME  ,
+				       Project1.C1 CODE_NAME  ,
+				       Project1.LAST_DEPT_CODE LAST_DEPT_CODE  ,
+				       Project1.LAST_GRP_CODE LAST_GRP_CODE  ,
+				       Project1.LAST_ORG_CODE LAST_ORG_CODE  
+				  FROM ( SELECT Extent1.MEM_ID MEM_ID  ,
+				                Extent1.MEM_CODE MEM_CODE  ,
+				                Extent1.NAME NAME  ,
+				                Extent2.LAST_DEPT_CODE LAST_DEPT_CODE  ,
+				                Extent2.LAST_GRP_CODE LAST_GRP_CODE  ,
+				                Extent2.LAST_ORG_CODE LAST_ORG_CODE  ,
+				                Extent1.MEM_CODE || ' - ' || Extent1.NAME C1  
+				         FROM ORG0001D Extent1
+				                JOIN ORG0005D Extent2   ON ( Extent2.MEM_ID = Extent1.MEM_ID )
+				                AND ( 3 = Extent2.MEM_LVL )
+				                AND ( Extent2.BRNCH_ID = #{groupCode} )
+				          WHERE  ( 1 = Extent1.STUS )
+				                   AND ( 2 = Extent1.MEM_TYPE ) ) Project1
+            
+        </select>
+        <select id="selectCodyList" parameterType="Map" resultType="egovMap">
+        SELECT Extent1.MEM_ID CODE_ID  ,
+			       Extent1.MEM_CODE MEM_CODE  ,
+			       Extent1.NAME NAME  ,
+			       Extent1.MEM_CODE || ' - ' || Extent1.NAME CODE_NAME  ,
+			       Extent2.DEPT_CODE DEPT_CODE  ,
+			       Extent2.GRP_CODE GRP_CODE  ,
+			       Extent2.ORG_CODE ORG_CODE  
+			  FROM ORG0001D Extent1
+			         JOIN ( SELECT vMemberOrg.MEM_ID MEM_ID  ,
+			                       vMemberOrg.MEM_CODE MEM_CODE  ,
+			                       vMemberOrg.MEM_LVL MEM_LVL  ,
+			                       vMemberOrg.DEPT_CODE DEPT_CODE  ,
+			                       vMemberOrg.GRP_CODE GRP_CODE  ,
+			                       vMemberOrg.ORG_CODE ORG_CODE  ,
+			                       vMemberOrg.TOP_ORG_CODE TOP_ORG_CODE  ,
+			                       vMemberOrg.MEM_UP_ID MEM_UP_ID  ,
+			                       vMemberOrg.LVL3_UP_ID LVL3_UP_ID  ,
+			                       vMemberOrg.LVL2_UP_ID LVL2_UP_ID  ,
+			                       vMemberOrg.LVL1_UP_ID LVL1_UP_ID  ,
+			                       vMemberOrg.LVL0_UP_ID LVL0_UP_ID  
+			                FROM ORG1001V vMemberOrg ) Extent2   ON ( Extent2.MEM_ID = Extent1.MEM_ID )
+			         AND ( Extent2.LVL3_UP_ID = #{groupCode} )
+			 WHERE  1 = Extent1.STUS
+		</select>
+		<select id="selectReportBranchCodeList" parameterType="Map" resultType="egovMap">
+		      SELECT Project1.BRNCH_ID CODE_ID  ,
+					       Project1.C1 CODE_NAME  
+					  FROM ( SELECT Extent1.BRNCH_ID BRNCH_ID  ,
+					                Extent1.CODE || '-' || Extent1.NAME C1  
+					         FROM SYS0005M Extent1
+					          WHERE  ( 1 = Extent1.STUS_ID )
+					                   AND ( 42 = Extent1.TYPE_ID )
+					         UNION ALL 
+					         SELECT 0 BRNCH_ID  ,
+					                'All Cody Branches(NationWide)' 
+					           FROM DUAL  ) Project1
+					  ORDER BY Project1.BRNCH_ID ASC
+		</select>
      </mapper>
